--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <header>
-        <div class="logo">Prep<span class="text-kuning">Box</span> 🥦</div>
+        <div class="logo">Prep<span class="text-kuning">Box</span> </div>
         <div class="nav-menu">
             <a href="cart.html" id="nav-cart-icon" class="cart-wrap"><i class="fas fa-shopping-cart"></i><span id="cart-count" class="cart-badge">0</span></a>
             
@@ -81,4 +81,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
