--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@
 <body>
     <div id="notif-overlay" class="notif-overlay"><div id="notif-box" class="notif-box"><i id="notif-icon" class="fas fa-check-circle notif-icon"></i><span id="notif-msg" class="notif-msg">Pesan</span><button class="btn-notif" onclick="closeNotif()">Oke</button></div></div>
     <header>
-        <div class="logo">Prep<span class="text-kuning">Box</span> 🥦</div>
+        <div class="logo">Prep<span class="text-kuning">Box</span> </div>
         <div class="nav-menu">
             <a href="cart.html" id="nav-cart-icon" class="cart-wrap"><i class="fas fa-shopping-cart"></i><span id="cart-count" class="cart-badge">0</span></a>
             <a href="profile.html" id="profile-btn-header" class="profile-btn-header"><i class="fas fa-user-circle"></i></a>
@@ -25,12 +25,13 @@
                 <h1 id="dp-name" class="detail-title">Nama Produk</h1>
                 <div id="dp-price" class="detail-price">Rp 0</div>
                 <div class="info-block"><h4>Deskripsi</h4><p id="dp-desc">Deskripsi produk.</p></div>
-                <div class="info-block"><h4>📦 Isi Dalam Box</h4><p id="dp-bahan">-</p></div>
-                <div class="info-block"><h4>👨‍🍳 Cara Masak</h4><p id="dp-masak">-</p></div>
+                <div class="info-block"><h4>Isi Dalam Box</h4><p id="dp-bahan">-</p></div>
+                <div class="info-block"><h4>Cara Masak</h4><p id="dp-masak">-</p></div>
                 <button id="btn-beli-detail" class="btn-full"><i class="fas fa-plus"></i> Masukkan Keranjang</button>
             </div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
