--- a/payment.html
+++ b/payment.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div class="logo">Prep<span class="text-kuning">Box</span> 🥦</div>
+        <div class="logo">Prep<span class="text-kuning">Box</span> </div>
         <div class="nav-menu">
             <a href="cart.html" class="back-link" style="margin:0;">Kembali ke Keranjang</a>
         </div>
@@ -105,4 +105,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
