--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <div id="notif-overlay" class="notif-overlay"><div id="notif-box" class="notif-box"><i id="notif-icon" class="fas fa-check-circle notif-icon"></i><span id="notif-msg" class="notif-msg">Pesan</span><button class="btn-notif" onclick="closeNotif()">Oke</button></div></div>
     
     <header>
-        <div class="logo">Prep<span class="text-kuning">Box</span> 🥦</div>
+        <div class="logo">Prep<span class="text-kuning">Box</span> </div>
         <div class="nav-menu">
             <a href="cart.html" id="nav-cart-icon" class="cart-wrap"><i class="fas fa-shopping-cart"></i><span id="cart-count" class="cart-badge">0</span></a>
             <a href="profile.html" id="profile-btn-header" class="profile-btn-header"><i class="fas fa-user-circle"></i></a>
@@ -66,4 +66,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
