--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
     </div>
 
     <header>
-        <div class="logo">Prep<span class="text-kuning">Box</span> 🥦</div>
+        <div class="logo">Prep<span class="text-kuning">Box</span> </div>
         <div class="nav-menu">
             <a href="index.html" class="back-link" style="margin:0;">Lanjut Belanja</a>
             <a href="profile.html" id="profile-btn-header" class="profile-btn-header"><i class="fas fa-user-circle"></i></a>
@@ -36,4 +36,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
